vertical bleed fixed for rotation

--- a/components/poster/poster.module.scss
+++ b/components/poster/poster.module.scss
@@ -1,7 +1,7 @@
 .sddw-poster {
   svg {
     [data-line] {
-      transform-origin: 50% 50%;
+      transform-origin: 0 0;
     }
   }
 
